Revamp HTML structure and styling for interactivity

--- a/index.html
+++ b/index.html
@@ -1,72 +1,136 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Приглашение</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Тестовая интерактивная страница</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Arial', sans-serif;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: radial-gradient(ellipse at bottom, #0b0c2a 0%, #050515 100%);
+        overflow: hidden;
+        color: white;
+    }
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: "Helvetica Neue", Arial, sans-serif;
-            background: linear-gradient(135deg, #ffdde1, #ee9ca7);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #333;
-        }
+    .container {
+        text-align: center;
+        max-width: 400px;
+        position: relative;
+    }
 
-        .card {
-            background: #fff;
-            padding: 30px 40px;
-            border-radius: 20px;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-            text-align: center;
-            max-width: 360px;
-            animation: fadeIn 1.3s ease;
-        }
+    img {
+        width: 100%;
+        border-radius: 15px;
+        margin-bottom: 20px;
+        opacity: 0;
+        transition: opacity 1s;
+    }
 
-        h1 {
-            margin-top: 0;
-            font-size: 26px;
-            color: #e25575;
-        }
+    .phrase {
+        font-size: 24px;
+        margin: 10px 0;
+        opacity: 0;
+        transition: opacity 1s;
+    }
 
-        p {
-            font-size: 18px;
-            margin-bottom: 25px;
-        }
+    .btn {
+        display: inline-block;
+        padding: 12px 24px;
+        background: #ff5a5a;
+        color: white;
+        text-decoration: none;
+        border-radius: 10px;
+        font-size: 18px;
+        margin-top: 20px;
+        opacity: 0;
+        transition: opacity 1s;
+    }
 
-        .btn {
-            display: inline-block;
-            padding: 12px 24px;
-            background: #e25575;
-            color: white;
-            text-decoration: none;
-            border-radius: 10px;
-            font-size: 18px;
-            transition: 0.3s;
-        }
+    /* Мелкие звёзды на фоне */
+    .star {
+        position: absolute;
+        background: white;
+        border-radius: 50%;
+        width: 2px;
+        height: 2px;
+        opacity: 0.8;
+        animation: twinkle 2s infinite alternate;
+    }
 
-        .btn:hover {
-            background: #c84462;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to   { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+    @keyframes twinkle {
+        from {opacity: 0.2;}
+        to {opacity: 1;}
+    }
+</style>
 </head>
-
 <body>
-    <div class="card">
-        <h1>У меня есть вопрос…</h1>
-        <p>Я бы очень хотел(а) провести с тобой небольшое свидание. Ты согласна?</p>
+<div class="container">
+    <img id="img1" src="https://placekitten.com/400/300" alt="Кот">
+    <img id="img2" src="https://placekitten.com/401/300" alt="Кот">
+    <img id="img3" src="https://placekitten.com/402/300" alt="Кот">
+    <img id="img4" src="https://placekitten.com/403/300" alt="Кот">
+    <div id="phrase" class="phrase"></div>
+    <a id="btn" class="btn" href="https://www.google.com" target="_blank">Перейти</a>
+</div>
 
-        <a class="btn" href="https://t.me/your_username">Да 💗</a>
-    </div>
+<script>
+const images = [
+    document.getElementById('img1'),
+    document.getElementById('img2'),
+    document.getElementById('img3'),
+    document.getElementById('img4')
+];
+
+const phrases = ['нехороший человек','мяу мяу','гав гав','смешно','тварь','дебильный','дурной'];
+const phraseDiv = document.getElementById('phrase');
+const btn = document.getElementById('btn');
+
+let index = 0;
+let phraseIndex = 0;
+
+function showNextImage() {
+    if(index > 0) images[index-1].style.opacity = 0;
+    if(index < images.length) {
+        images[index].style.opacity = 1;
+        phraseDiv.style.opacity = 0;
+        setTimeout(showNextPhrase, 1000);
+        index++;
+    } else {
+        btn.style.opacity = 1; // Показать кнопку в конце
+    }
+}
+
+function showNextPhrase() {
+    phraseDiv.textContent = phrases[phraseIndex];
+    phraseDiv.style.opacity = 1;
+    phraseIndex++;
+    if(phraseIndex < phrases.length) {
+        setTimeout(showNextImage, 1500);
+    } else {
+        setTimeout(showNextImage, 1500);
+    }
+}
+
+// Создать звёзды на фоне
+for(let i=0;i<100;i++){
+    let star = document.createElement('div');
+    star.className='star';
+    star.style.top=Math.random()*100+'%';
+    star.style.left=Math.random()*100+'%';
+    star.style.width=(Math.random()*3+1)+'px';
+    star.style.height=star.style.width;
+    star.style.animationDuration=(Math.random()*2+1)+'s';
+    document.body.appendChild(star);
+}
+
+// Запуск анимации
+showNextImage();
+</script>
 </body>
 </html>
