--- a/index.html
+++ b/index.html
@@ -3,103 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Приглашение</title>
+  <title>Тестовое приглашение</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * { margin:0; padding:0; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
-    html, body { height: 100%; overflow-x: hidden; scroll-behavior: smooth; }
-    body {
-      background: #000;
-      color: #fff;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; font-family:'Montserrat', sans-serif; }
+    html, body { height:100%; overflow:hidden; }
+    body { background:#000; color:#fff; display:flex; justify-content:center; align-items:center; }
 
-    /* Фон видео или анимация */
+    /* Фоновое видео */
     .background-video {
-      position: fixed;
-      top:0; left:0; width:100%; height:100%;
-      object-fit: cover;
-      z-index: -1;
-      opacity: 0.6;
+      position:fixed; top:0; left:0; width:100%; height:100%;
+      object-fit:cover; z-index:-1; opacity:0.5;
     }
 
-    /* Секции */
-    section {
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      text-align: center;
-      padding: 20px;
+    .container {
+      text-align:center;
+      max-width:600px;
+      padding:30px;
+      background: rgba(0,0,0,0.5);
+      border-radius:20px;
     }
 
-    h1, p, img, button {
-      opacity: 0;
-      transform: translateY(50px);
-      transition: all 1s ease;
-    }
-
-    h1 { font-size: 3rem; margin-bottom: 20px; }
-    p { font-size: 1.3rem; margin-bottom: 30px; }
-    img { max-width: 80%; border-radius: 20px; margin-bottom: 30px; transform: scale(0.8); }
+    h1 { font-size:3rem; margin-bottom:20px; opacity:0; animation:fadeInSlide 1s forwards 0.5s; }
+    p { font-size:1.3rem; margin-bottom:30px; opacity:0; animation:fadeInSlide 1s forwards 1s; }
+    img { width:100%; border-radius:15px; margin-bottom:30px; opacity:0; transform:scale(0.8); animation:popIn 1s forwards 1.5s; }
     button {
-      padding: 15px 30px;
-      font-size: 1.1rem;
-      border:none;
-      border-radius:12px;
-      background:#fff;
-      color:#ff416c;
-      font-weight:bold;
-      cursor:pointer;
-      transition: transform 0.3s, background 0.3s;
-    }
-    button:hover { transform: scale(1.05); background:#ffe0e5; }
-
-    /* Анимация при прокрутке */
-    .show { opacity: 1; transform: translateY(0) scale(1); }
-
-  </style>
-</head>
-<body>
-
-  <!-- Фоновое видео (можно заменить на любое) -->
-  <video class="background-video" autoplay muted loop>
-    <source src="background.mp4" type="video/mp4">
-  </video>
-
-  <section id="intro">
-    <h1>Привет, [Дина]!</h1>
-    <p>Хочу пригласить тебя на маленькое приключение 😄</p>
-    <img src="your-image.jpg" alt="Приглашение">
-    <button onclick="alert('Круто! Мы идём на свидание! 🎉')">Принять приглашение</button>
-  </section>
-
-  <section id="second">
-    <h1>Немного деталей</h1>
-    <p>Дата, время и место — оставь это сюрпризом 😉</p>
-    <img src="your-image-2.jpg" alt="Детали">
-  </section>
-
-  <section id="third">
-    <h1>Жду тебя!</h1>
-    <p>Будет весело, обещаю 🎉</p>
-    <button onclick="alert('До встречи! 🥰')">Подтвердить</button>
-  </section>
-
-  <script>
-    // Анимация появления элементов при скролле
-    const elements = document.querySelectorAll('h1, p, img, button');
-
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if(entry.isIntersecting) {
-          entry.target.classList.add('show');
-        }
-      });
-    }, { threshold: 0.3 });
-
-    elements.forEach(el => observer.observe(el));
-  </script>
-
-</body>
-</html>
+      padding:15px 30px; font-size:1.1rem; border:none; border-radius:12px;
+      background:#fff; color:#ff416c; font-weight:bold; cursor:pointer;
+      opacit
