--- a/index.html
+++ b/index.html
@@ -1,33 +1,94 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Тестовое приглашение</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family:'Montserrat', sans-serif; }
-    html, body { height:100%; overflow:hidden; }
-    body { background:#000; color:#fff; display:flex; justify-content:center; align-items:center; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TikTok-приглашение</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  * { margin:0; padding:0; box-sizing:border-box; font-family:'Montserrat', sans-serif; }
+  html, body { height:100%; overflow:hidden; background:#000; }
+  body { display:flex; justify-content:center; align-items:center; }
 
-    /* Фоновое видео */
-    .background-video {
-      position:fixed; top:0; left:0; width:100%; height:100%;
-      object-fit:cover; z-index:-1; opacity:0.5;
-    }
+  /* Фоновое видео + градиент */
+  .background-container {
+    position:fixed; top:0; left:0; width:100%; height:100%; z-index:-2;
+    background: linear-gradient(120deg, #ff416c, #ff4b2b);
+  }
+  .background-video {
+    position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover;
+    z-index:-1; opacity:0.5;
+  }
 
-    .container {
-      text-align:center;
-      max-width:600px;
-      padding:30px;
-      background: rgba(0,0,0,0.5);
-      border-radius:20px;
-    }
+  .container {
+    text-align:center; max-width:600px; padding:30px;
+    background: rgba(0,0,0,0.5); border-radius:20px;
+  }
 
-    h1 { font-size:3rem; margin-bottom:20px; opacity:0; animation:fadeInSlide 1s forwards 0.5s; }
-    p { font-size:1.3rem; margin-bottom:30px; opacity:0; animation:fadeInSlide 1s forwards 1s; }
-    img { width:100%; border-radius:15px; margin-bottom:30px; opacity:0; transform:scale(0.8); animation:popIn 1s forwards 1.5s; }
-    button {
-      padding:15px 30px; font-size:1.1rem; border:none; border-radius:12px;
-      background:#fff; color:#ff416c; font-weight:bold; cursor:pointer;
-      opacit
+  h1, p, img, button {
+    opacity:0; transform:translateY(50px);
+  }
+
+  h1 { font-size:3rem; margin-bottom:20px; animation:fadeSlide 1s forwards; }
+  p { font-size:1.3rem; margin-bottom:30px; animation:fadeSlide 1s forwards; }
+  img { width:100%; border-radius:15px; margin-bottom:30px; transform:scale(0.8); animation:popIn 1s forwards; }
+  button {
+    padding:15px 30px; font-size:1.1rem; border:none; border-radius:12px;
+    background:#fff; color:#ff416c; font-weight:bold; cursor:pointer;
+    transition: transform 0.3s, background 0.3s;
+  }
+  button:hover { transform:scale(1.1); background:#ffe0e5; animation:blink 1s infinite; }
+
+  /* Анимации */
+  @keyframes fadeSlide {
+    0% { opacity:0; transform:translateY(50px); }
+    100% { opacity:1; transform:translateY(0); }
+  }
+  @keyframes popIn {
+    0% { opacity:0; transform:scale(0.8); }
+    100% { opacity:1; transform:scale(1); }
+  }
+  @keyframes blink {
+    0%,100%{opacity:1;}
+    50%{opacity:0.5;}
+  }
+</style>
+</head>
+<body>
+
+<div class="background-container"></div>
+
+<video class="background-video" autoplay muted loop>
+  <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+</video>
+
+<div class="container">
+  <h1 id="title">Привет, подруга!</h1>
+  <p id="text">Хочу пригласить тебя на супер-приключение 😄</p>
+  <img id="image" src="https://via.placeholder.com/500x300.png?text=Твоя+картинка" alt="Тестовое изображение">
+  <button id="btn">Принять приглашение</button>
+</div>
+
+<audio id="music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
+
+<script>
+  const title = document.getElementById('title');
+  const text = document.getElementById('text');
+  const image = document.getElementById('image');
+  const btn = document.getElementById('btn');
+  const music = document.getElementById('music');
+
+  // Запуск музыки при клике по кнопке body (браузеры не позволяют автозапуск звука)
+  document.body.addEventListener('click', ()=>music.play(), {once:true});
+
+  // Анимация поэтапно
+  setTimeout(()=> title.style.opacity=1, 500);
+  setTimeout(()=> { title.style.transform='translateY(0)'; text.style.opacity=1; text.style.transform='translateY(0)'; }, 1200);
+  setTimeout(()=> { image.style.opacity=1; image.style.transform='scale(1)'; }, 2000);
+  setTimeout(()=> { btn.style.opacity=1; btn.style.transform='translateY(0)'; }, 2800);
+
+  btn.addEventListener('click', ()=> alert('Ура! Мы идём на свидание! 🎉'));
+</script>
+
+</body>
+</html>
