--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Старая печатная машинка</title>
+<title>Ничегооо</title>
 <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
 <style>
     body {
@@ -36,13 +36,13 @@
 <audio id="typeSound" src="https://www.soundjay.com/mechanical/sounds/typewriter-key-1.mp3" preload="auto"></audio>
 
 <script>
-    const text = `привет! это пример текста, который печатается как на старой машинке.
-тёмная сторона, ровный шрифт, эффект настоящей печати.`;
+    const text = нахуя?
+        да не знаю просто так захотелось пум пумм да да атвыаол ываолы втаолы вола выола ытавы т авыотла ывлаот ывтао влытаолыват ыолват ыолват ывлоат ывлоа тывалоты аол`;
 
     const output = document.getElementById("output");
     const typeSound = document.getElementById("typeSound");
     let i = 0;
-    const speed = 80; // базовая скорость печати (мс)
+    const speed = 95; // базовая скорость печати (мс)
 
     function typeWriter() {
         if (i < text.length) {
