Change title and text in index.html
Updated the title and text content in index.html.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Test</title>
+<title>Typing Test</title>
 <style>
     body {
         background: #111;
@@ -19,9 +19,10 @@
 <div id="output"></div>
 
 <script>
-    const text = `Привет!
-Это тестовая печать.
-Если ты видишь этот текст — значит работает.`;
+    const text = `нахуя?
+да не знаю просто так захотелось пум пумм да да атвыаол ываолы втаолы вола выола
+ытавы т авыотла ывлаот ывтао влытаолыват ыолват ыолват ывлоат ывлоа
+тывалоты аол`;
 
     let i = 0;
 
