Update title and text content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ничегооо</title>
+<title>ничего</title>
 <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
 <style>
     body {
@@ -35,10 +35,16 @@
 <audio id="typeSound" src="https://www.soundjay.com/mechanical/sounds/typewriter-key-1.mp3" preload="auto"></audio>
 
 <script>
-    const text = `нах у я?
-да не знаю просто так захотелось пум пумм да да атвыаол ываолы
-втаолы вола выола ытавы т авыотла ывлаот ывтао влытаолыват
-ыолват ыолват ывлоат ывлоа тывалоты аол`;
+    const text = `нахуя?
+честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и роешил написать просто что думаю сплошняком.
+нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения . огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , в моей голове это кажется важным и без этих мини подарков это не все для меня.
+заранее скажу, не подумай, что всем этим я пытаюсь все вернуть и тд - а просто сделать приятное и хотя бы  быть в твоей голове меньшим уебком и мудаком. 
+было бы замечатело , если ты примешь все это и не выкинешь в помойку :) 
+думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается 
+да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
+так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
+надеюсь в жизни все у тебя будет супер и будут открываться филиалы твоей студии по всей рашке , чтоб сидеть на балконе 90 этажа москва сити и пилить истории что жизнь удалась 
+надеюсь цветочки понравятся ну и мнии приколы. `;
 
     const output = document.getElementById("output");
     const typeSound = document.getElementById("typeSound");
