--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается 
 да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
 так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
-надеюсь в жизни все у тебя будет супер и будут открываться филиалы твоей студии по всей рашке , чтоб сидеть на балконе 90 этажа москва сити и пилить истории что жизнь удалась 
+никогда в жизни не делал подобного (верь!) , но тебе почему то захотелось немного высказаться , ты по сути то и явлешсья одним из первых моих знакомых казанский с кем я еще как то пересекался в будущем  , а уж тем более встречался..?
+переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease.  
 надеюсь цветочки понравятся ну и мнии приколы. `;
 
     const output = document.getElementById("output");
