--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </div>
 
 <script>
-    const text = нахуя? честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и роешил написать просто что думаю сплошняком. нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения . огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , в моей голове это кажется важным и без этих мини подарков это не все для меня. заранее скажу, не подумай, что всем этим я пытаюсь все вернуть и тд - а просто сделать приятное и хотя бы быть в твоей голове меньшим уебком и мудаком. было бы замечатело , если ты примешь все это и не выкинешь в помойку :) думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !? никогда в жизни не делал подобного (верь!) , но тебе почему то захотелось немного высказаться , ты по сути то и явлешсья одним из первых моих знакомых казанский с кем я еще как то пересекался в будущем , а уж тем более встречался..? переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease. надеюсь цветочки понравятся ну и мнии приколы. ;;
+    const text = `нахуя?
+честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и роешил написать просто что думаю сплошняком.
+нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения.
+огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , в моей голове это кажется важным и без этих мини подарков это не все для меня.
+заранее скажу, не подумай, что всем этим я пытаюсь все вернуть и тд - а просто сделать приятное и хотя бы быть в твоей голове меньшим уебком и мудаком.
+было бы замечатело , если ты примешь все это и не выкинешь в помойку :)
+думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается
+да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишком громко ахвыха
+так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща думаю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
+никогда в жизни не делал подобного (верь!) , но тебе почему то захотелось немного высказаться , ты по сути то и являешься одним из первых моих знакомых казанский с кем я еще как то пересекался в будущем , а уж тем более встречался..?
+переживаю как будто на экзамене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease.
+надеюсь цветочки понравятся ну и мини приколы.`;
+
 
     const output = document.getElementById("output");
     const typeSound = document.getElementById("typeSound");
@@ -16,7 +28,6 @@
     const finalText = document.getElementById("finalText");
     const cursor = document.getElementById("cursor");
 
-    
     finalImage.style.display = "none";
     finalText.style.display = "none";
     cursor.style.display = "inline-block";
