Refactor HTML structure and update text content

--- a/index.html
+++ b/index.html
@@ -1,26 +1,78 @@
-<!-- ТВОЯ КАРТИНКА -->
-<img id="finalImage" src="photo_2025-12-03_17-55-44.jpg" alt="image" style="display:none;">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ничего</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+
+<style>
+    body {
+        background: #1c1c1c;
+        color: #d4d4d4;
+        font-family: 'Courier Prime', monospace;
+        font-size: 24px;
+        padding: 40px;
+        white-space: pre-wrap;
+    }
+    .cursor {
+        display: inline-block;
+        width: 10px;
+        height: 24px;
+        background: #d4d4d4;
+        margin-left: 4px;
+        animation: blink 0.7s infinite;
+    }
+    @keyframes blink {
+        0% { opacity: 1; }
+        50% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+
+    #finalImage {
+        display: none;
+        margin-top: 40px;
+        max-width: 340px;
+        border-radius: 12px;
+    }
+
+    #finalText {
+        display: none;
+        margin-top: 25px;
+        font-size: 26px;
+        opacity: 0;
+        transition: opacity 1.2s ease;
+    }
+</style>
+</head>
+<body>
+
+<div id="output"></div><div class="cursor" id="cursor"></div>
+
+<audio id="typeSound" src="https://www.soundjay.com/mechanical/sounds/typewriter-key-1.mp3" preload="auto"></audio>
+
+<!-- КАРТИНКА -->
+<img id="finalImage" src="photo_2025-12-03_17-55-44.jpg" alt="image">
 
 <!-- Финальная фраза -->
-<div id="finalText" style="display:none; opacity:0; margin-top:25px; font-size:26px; transition:opacity 1.2s ease;">
-    смешно? регина повесила в туалете 
+<div id="finalText">
+    смешно? регина повесила в туалете<br>
     и да, если ты это читаешь — спасибо, что вообще дочитала
 </div>
 
 <script>
     const text = `нахуя?
 честно говоря было несколько вариаций текста, кода что ты сейчас видишь - все хуйня и роешил написать просто что думаю сплошняком.
-нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения.
-огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , в моей голове это кажется важным и без этих мини подарков это не все для меня.
-заранее скажу, не подумай, что всем этим я пытаюсь все вернуть и тд - а просто сделать приятное и хотя бы быть в твоей голове меньшим уебком и мудаком.
-было бы замечатело , если ты примешь все это и не выкинешь в помойку :)
-думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается
-да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишком громко ахвыха
-так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща думаю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
-никогда в жизни не делал подобного (верь!) , но тебе почему то захотелось немного высказаться , ты по сути то и являешься одним из первых моих знакомых казанский с кем я еще как то пересекался в будущем , а уж тем более встречался..?
-переживаю как будто на экзамене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease.
-надеюсь цветочки понравятся ну и мини приколы.`;
-
+нахуя щас ? наверное потому , что все это время как то не верится что ли во все это настолько привык уж , не могу дать точного определения . огромная просьба заранее , не злись на этот мув пожалуйста(plsrng) , в моей голове это кажется важным и без этих мини подарков это не все для меня.
+заранее скажу, не подумай, что всем этим я пытаюсь все вернуть и тд - а просто сделать приятное и хотя бы  быть в твоей голове меньшим уебком и мудаком. 
+было бы замечатело , если ты примешь все это и не выкинешь в помойку :) 
+думаю обо всем спустя почти 2 недели думаешь - господи как ты эти момент не учел ваще , а ведь из мелочей и копится этот огромный пузырь и в моменте лопается 
+да да это полный кринж какой то что я пишу , но чувство недосказанности присутсвует и хотелось чутка это вывалить наружу хотя бы в этом коде , не смейся с этого слишкмо громко ахвыха
+так вот, прости за во первых потраченное время на меня , что все так к сожалению закончилось , я вот ща дуамю что это действительно самое адекватное общение было в моей жизни , без мозгоебств , без качелей , без депрессий !?
+никогда в жизни не делал подобного (верь!) , но тебе почему то захотелось немного высказаться , ты по сути то и явлешсья одним из первых моих знакомых казанский с кем я еще как то пересекался в будущем  , а уж тем более встречался..?
+переживаю как будтто на экзмене каком то , но больше за то что ты отхуесосишь за этот мув такой , поэтому надеюсь такого не будет pleeease.  
+надеюсь цветочки понравятся ну и мнии приколы. `;
 
     const output = document.getElementById("output");
     const typeSound = document.getElementById("typeSound");
@@ -28,12 +80,11 @@
     const finalText = document.getElementById("finalText");
     const cursor = document.getElementById("cursor");
 
-    finalImage.style.display = "none";
-    finalText.style.display = "none";
-    cursor.style.display = "inline-block";
-
     let i = 0;
     const speed = 55;
+
+    finalImage.style.display = "none";
+    finalText.style.display = "none";
 
     function typeWriter() {
         if (i < text.length) {
@@ -61,3 +112,6 @@
 
     typeWriter();
 </script>
+
+</body>
+</html>
